# Midi-Padosuso

./: CMakeLists.txt  README.md
include/: Map.hpp  Statek.hpp  consts.hpp
src/: CMakeLists.txt  Map.cpp  Statek.cpp  main.cpp
